add template for public

--- a/src/main/webapp/BikeEcommerceWeb/index.html
+++ b/src/main/webapp/BikeEcommerceWeb/index.html
@@ -100,7 +100,7 @@ Author URL: http://w3layouts.com
 					<a class="navbar-brand" href="index.html">
 						Spry<span class="lohny">S</span>tore</a>
 					<!-- if logo is image enable this   
-							<a class="navbar-brand" href="#index.html">
+							<a class="navbar-brand" href="#index.jsp">
 								<img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 							</a> -->
 					<!--/search-right-->
@@ -965,7 +965,7 @@ Author URL: http://w3layouts.com
                       <h3><a class="logo-footer" href="index.html">
                             Spry<span class="lohny">S</span>tore</a></h3>
                       <!-- if logo is image enable this   
-                                    <a class="navbar-brand" href="#index.html">
+                                    <a class="navbar-brand" href="#index.jsp">
                                         <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
                                     </a> -->
                       <p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio consectetur.Vivamus
