--- a/src/main/webapp/forgotPassword.html
+++ b/src/main/webapp/forgotPassword.html
@@ -32,7 +32,7 @@
           <button class="btn btn-primary" type="submit">Send</button>
         </div>
         <hr class="my-2">
-          <a href="index.html" class="text-white ml-5" style="margin-left: 13rem!important;">Back to Login!</a>
+          <a href="index.jsp" class="text-white ml-5" style="margin-left: 13rem!important;">Back to Login!</a>
         <hr class="my-2">
 
       </form>
