--- a/src/main/webapp/signUp.html
+++ b/src/main/webapp/signUp.html
@@ -52,7 +52,7 @@
                 <label for="exampleInputPassword2">Confirm Password</label>
             </div>
             <button class="btn btn-primary mb-1" type="submit" style="margin-left: 30%;width: 40%">Sign Up</button>
-            <p class="text-center">Already have an account? <a class="text-white" href="index.html">Login here</a> </p>
+            <p class="text-center">Already have an account? <a class="text-white" href="index.jsp">Login here</a> </p>
 <!--             button login with facebook-->
             <div class="d-grid gap-lg-2 col-md-8 mb-2 mx-auto">
                 <button class="btn btn-primary" type="button"><i class="fa-brands fa-facebook"></i>Login with Facebook</button>
