--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -96,10 +96,10 @@ Author URL: http://w3layouts.com
         <!--/nav-->
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid serarc-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.jsp">
               Spry<span class="lohny">S</span>tore</a>
             <!-- if logo is image enable this   
-                    <a class="navbar-brand" href="#index.html">
+                    <a class="navbar-brand" href="#index.jsp">
                       <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
                     </a> -->
             <!--/search-right-->
@@ -133,7 +133,7 @@ Author URL: http://w3layouts.com
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="index.jsp">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -157,7 +157,7 @@ Author URL: http://w3layouts.com
           <nav aria-label="breadcrumb">
             <h2 class="hny-title text-center">Contact Us</h2>
             <ol class="breadcrumb mb-0">
-              <li><a href="index.html">Home</a>
+              <li><a href="index.jsp">Home</a>
                 <span class="fa fa-angle-double-right"></span></li>
               <li class="active">Contact</li>
             </ol>
@@ -231,10 +231,10 @@ Author URL: http://w3layouts.com
           <div class="container py-lg-5">
               <div class="text-txt row">
                   <div class="left-side col-lg-4">
-                      <h3><a class="logo-footer" href="index.html">
+                      <h3><a class="logo-footer" href="index.jsp">
                             Spry<span class="lohny">S</span>tore</a></h3>
                       <!-- if logo is image enable this   
-                                    <a class="navbar-brand" href="#index.html">
+                                    <a class="navbar-brand" href="#index.jsp">
                                         <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
                                     </a> -->
                       <p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio consectetur.Vivamus
@@ -260,7 +260,7 @@ Author URL: http://w3layouts.com
                               <h6>Useful Links</h6>
                               <div class="footer-hny-ul">
                                   <ul>
-                                      <li><a href="index.html">Home</a></li>
+                                      <li><a href="index.jsp">Home</a></li>
                                       <li><a href="about.html">About</a></li>
                                       <li><a href="#">Blog</a></li>
                                       <li><a href="contact.html">Contact</a></li>
