serviece of user is done, it have a lot of method like : -getAllUser -getUserByKey -insertUser -updateUser -deleteUserById -loginByUserNameOrEmail -getSaltByUserNameOrEmail -isEmailOrUserNameAlreadyExists

--- a/src/main/webapp/BikeEcommerceWeb/forgotPassword.html
+++ b/src/main/webapp/BikeEcommerceWeb/forgotPassword.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta userName="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>SpryStore E-commerce </title>
   <!-- Template CSS -->
 
@@ -22,10 +22,10 @@
     <div class="container" style="width: 50% ; background-color:#1c1f23 ">
       <h5 class="text-center mb-3 text-white-50">PassWord Forgotten?</h5>
       <form action="#" method="post" style="margin-bottom: 2px">
-        <small id="emailHelp" class="form-text text-muted mb-1">Input your Email to get your PassWord!</small>
+        <small userId="emailHelp" class="form-text text-muted mb-1">Input your Email to get your PassWord!</small>
         <div class="form-floating mb-3">
-          <input type="email" class="form-control" id="exampleInputEmail"
-                 aria-describedby="emailHelp" placeholder="name@examplae.com" required="">
+          <input type="email" class="form-control" userId="exampleInputEmail"
+                 aria-describedby="emailHelp" placeholder="userName@examplae.com" required="">
           <label for="exampleInputEmail">Email address</label>
         </div>
         <div class="d-grid gap-lg-2 col-md-8 mb-2 mx-auto">
