--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -8,7 +8,7 @@ Author URL: http://w3layouts.com
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta userName="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>SpryStore E-commerce Category Bootstrap Responsive Website Template | About :: W3layouts</title>
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -44,9 +44,9 @@ Author URL: http://w3layouts.com
               </li>
               <li class="transmitvcart galssescart2 cart cart box_1">
                 <form action="#" method="post" class="last">
-                  <input type="hidden" name="cmd" value="_cart">
-                  <input type="hidden" name="display" value="1">
-                  <button class="top_transmitv_cart" type="submit" name="submit" value="">
+                  <input type="hidden" userName="cmd" value="_cart">
+                  <input type="hidden" userName="display" value="1">
+                  <button class="top_transmitv_cart" type="submit" userName="submit" value="">
                     My Cart
                     <span class="fa fa-shopping-cart"></span>
                   </button>
@@ -65,14 +65,14 @@ Author URL: http://w3layouts.com
                   <form action="#" method="post">
                     <div class="form-group">
                       <p class="login-texthny mb-2">Email address</p>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                      <input type="email" class="form-control" userId="exampleInputEmail1" aria-describedby="emailHelp"
                         placeholder="" required="">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email
+                      <small userId="emailHelp" class="form-text text-muted">We'll never share your email
                         with anyone else.</small>
                     </div>
                     <div class="form-group">
                       <p class="login-texthny mb-2">Password</p>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
+                      <input type="password" class="form-control" userId="exampleInputPassword1" placeholder="" required="">
                     </div>
                     <div class="form-check mb-2">
                       <div class="userhny-check">
@@ -110,11 +110,11 @@ Author URL: http://w3layouts.com
               <!-- search popup -->
 
 
-              <div id="search" class="pop-overlay">
+              <div userId="search" class="pop-overlay">
                 <div class="popup">
 
                   <form action="#" method="post" class="search-box">
-                    <input type="search" placeholder="Keyword" name="search" required="required" autofocus="">
+                    <input type="search" placeholder="Keyword" userName="search" required="required" autofocus="">
                     <button type="submit" class="btn">Search</button>
                   </form>
 
@@ -129,7 +129,7 @@ Author URL: http://w3layouts.com
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             	<span class="navbar-toggler-icon fa fa-bars"> </span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" userId="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="index.jsp">Home</a>
@@ -176,9 +176,9 @@ Author URL: http://w3layouts.com
 							<div class="col-lg-6 mb-lg-0 mb-5">
 									<h3 class="hny-title">
 											About Our Spry<span>Store</span></h3>
-								<p class="my-4">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla,
-								gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia</p>
-								<p class="mb-4">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla.</p>
+								<p class="my-4">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla,
+								gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia</p>
+								<p class="mb-4">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla.</p>
 								<div class="read">
 									<a href="#" class="read-more btn">Shop Now</a>
 								</div>	
@@ -257,7 +257,7 @@ Author URL: http://w3layouts.com
 							<h3>Let your footwear do the talking</h3>
 							<div class="clearfix"></div>
 						</a>
-						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia.</p>
+						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla, gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia.</p>
 					</div>
 					<div class="col-md-6 w3-icon-grid1">
 						<a href="#link">
@@ -265,7 +265,7 @@ Author URL: http://w3layouts.com
 							<h3>Trendy celebrity collections</h3>
 							<div class="clearfix"></div>
 						</a>
-						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia.</p>
+						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla, gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia.</p>
 					</div>
 					<div class="col-md-6 w3-icon-grid1">
 						<a href="#link">
@@ -273,7 +273,7 @@ Author URL: http://w3layouts.com
 							<h3>Animation</h3>
 							<div class="clearfix"></div>
 						</a>
-						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia.</p>
+						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla, gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia.</p>
 					</div>
 					<div class="col-md-6 w3-icon-grid1">
 						<a href="#link">
@@ -281,7 +281,7 @@ Author URL: http://w3layouts.com
 							<h3>Vast collection of Sports shoes</h3>
 							<div class="clearfix"></div>
 						</a>
-						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia.</p>
+						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla, gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia.</p>
 					</div>
 					<div class="col-md-6 w3-icon-grid1">
 						<a href="#link">
@@ -289,7 +289,7 @@ Author URL: http://w3layouts.com
 							<h3>Uniquely designed collection</h3>
 							<div class="clearfix"></div>
 						</a>
-						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia.</p>
+						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla, gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia.</p>
 					</div>
 					<div class="col-md-6 w3-icon-grid1">
 						<a href="#link">
@@ -298,7 +298,7 @@ Author URL: http://w3layouts.com
 									High Quality Footwear</h3>
 							<div class="clearfix"></div>
 						</a>
-						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id erat eu ullamcorper. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in culpa quis. Phasellus lacinia.</p>
+						<p>Lorem sint occaecat non proident, sunt in culpa quis. Phasellus lacinia userId erat eu ullamcorper. Nunc userId ipsum fringilla, gravida felis vitae. Phasellus lacinia userId, sunt in culpa quis. Phasellus lacinia.</p>
 					</div>
 					
 					
@@ -493,7 +493,7 @@ Author URL: http://w3layouts.com
                               W3Layouts</a>
                       </p>
                   </div>
-                  <button onclick="topFunction()" id="movetop" title="Go to top">
+                  <button onclick="topFunction()" userId="movetop" title="Go to top">
                       <span class="fa fa-angle-double-up"></span>
                   </button>
               </div>
