--- a/src/main/webapp/BikeEcommerceWeb/contact.html
+++ b/src/main/webapp/BikeEcommerceWeb/contact.html
@@ -8,7 +8,7 @@ Author URL: http://w3layouts.com
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta userName="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>SpryStore E-commerce Category Bootstrap Responsive Website Template | Contact :: W3layouts</title>
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -44,9 +44,9 @@ Author URL: http://w3layouts.com
               </li>
               <li class="transmitvcart galssescart2 cart cart box_1">
                 <form action="#" method="post" class="last">
-                  <input type="hidden" name="cmd" value="_cart">
-                  <input type="hidden" name="display" value="1">
-                  <button class="top_transmitv_cart" type="submit" name="submit" value="">
+                  <input type="hidden" userName="cmd" value="_cart">
+                  <input type="hidden" userName="display" value="1">
+                  <button class="top_transmitv_cart" type="submit" userName="submit" value="">
                     My Cart
                     <span class="fa fa-shopping-cart"></span>
                   </button>
@@ -65,14 +65,14 @@ Author URL: http://w3layouts.com
                   <form action="#" method="post">
                     <div class="form-group">
                       <p class="login-texthny mb-2">Email address</p>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                      <input type="email" class="form-control" userId="exampleInputEmail1" aria-describedby="emailHelp"
                         placeholder="" required="">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email
+                      <small userId="emailHelp" class="form-text text-muted">We'll never share your email
                         with anyone else.</small>
                     </div>
                     <div class="form-group">
                       <p class="login-texthny mb-2">Password</p>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
+                      <input type="password" class="form-control" userId="exampleInputPassword1" placeholder="" required="">
                     </div>
                     <div class="form-check mb-2">
                       <div class="userhny-check">
@@ -110,11 +110,11 @@ Author URL: http://w3layouts.com
               <!-- search popup -->
 
 
-              <div id="search" class="pop-overlay">
+              <div userId="search" class="pop-overlay">
                 <div class="popup">
 
                   <form action="#" method="post" class="search-box">
-                    <input type="search" placeholder="Keyword" name="search" required="required" autofocus="">
+                    <input type="search" placeholder="Keyword" userName="search" required="required" autofocus="">
                     <button type="submit" class="btn">Search</button>
                   </form>
 
@@ -130,7 +130,7 @@ Author URL: http://w3layouts.com
               <span class="navbar-toggler-icon fa fa-bars"> </span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" userId="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Home</a>
@@ -208,12 +208,12 @@ Author URL: http://w3layouts.com
             <h3 class="hny-title two text-center">Fill out the form.</h3>
             <form action="https://sendmail.w3layouts.com/submitForm"class="mt-md-5 mt-4" method="post">
               <div class="input-grids">
-                <input type="text" name="w3lName" id="w3lName" placeholder="Name">
-                <input type="email" name="w3lSender" id="w3lSender" placeholder="Email" required="" />
-                <input type="subject" name="w3lSubject" id="w3lSubject" placeholder="Subject" required="">
+                <input type="text" userName="w3lName" userId="w3lName" placeholder="Name">
+                <input type="email" userName="w3lSender" userId="w3lSender" placeholder="Email" required="" />
+                <input type="subject" userName="w3lSubject" userId="w3lSubject" placeholder="Subject" required="">
               </div>
               <div class="input-textarea">
-                <textarea name="w3lMessage" id="w3lMessage" placeholder="Message" required=""></textarea>
+                <textarea userName="w3lMessage" userId="w3lMessage" placeholder="Message" required=""></textarea>
               </div>
               <button type="submit" class="btn">Send</button>
             </form>
@@ -310,7 +310,7 @@ Author URL: http://w3layouts.com
                               W3Layouts</a>
                       </p>
                   </div>
-                  <button onclick="topFunction()" id="movetop" title="Go to top">
+                  <button onclick="topFunction()" userId="movetop" title="Go to top">
                       <span class="fa fa-angle-double-up"></span>
                   </button>
               </div>
