--- a/src/main/webapp/BikeEcommerceWeb/index.html
+++ b/src/main/webapp/BikeEcommerceWeb/index.html
@@ -8,7 +8,7 @@ Author URL: http://w3layouts.com
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta userName="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>SpryStore E-commerce Category Bootstrap Responsive Website Template | Home :: W3layouts</title>
   <!-- Template CSS -->
 
@@ -43,9 +43,9 @@ Author URL: http://w3layouts.com
 						</li>
 						<li class="transmitvcart galssescart2 cart cart box_1">
 							<form action="#" method="post" class="last">
-								<input type="hidden" name="cmd" value="_cart">
-								<input type="hidden" name="display" value="1">
-								<button class="top_transmitv_cart" type="submit" name="submit" value="">
+								<input type="hidden" userName="cmd" value="_cart">
+								<input type="hidden" userName="display" value="1">
+								<button class="top_transmitv_cart" type="submit" userName="submit" value="">
 									My Cart
 									<span class="fa fa-shopping-cart"></span>
 								</button>
@@ -64,14 +64,14 @@ Author URL: http://w3layouts.com
 								<form action="#" method="post">
 									<div class="form-group">
 										<p class="login-texthny mb-2">Email address</p>
-										<input type="email" class="form-control" id="exampleInputEmail1"
+										<input type="email" class="form-control" userId="exampleInputEmail1"
 											aria-describedby="emailHelp" placeholder="" required="">
-										<small id="emailHelp" class="form-text text-muted">We'll never share your email
+										<small userId="emailHelp" class="form-text text-muted">We'll never share your email
 											with anyone else.</small>
 									</div>
 									<div class="form-group">
 										<p class="login-texthny mb-2">Password</p>
-										<input type="password" class="form-control" id="exampleInputPassword1"
+										<input type="password" class="form-control" userId="exampleInputPassword1"
 											placeholder="" required="">
 									</div>
 									<div class="form-check mb-2">
@@ -109,11 +109,11 @@ Author URL: http://w3layouts.com
 						<a href="#search" title="search"><span class="fa fa-search mr-2" aria-hidden="true"></span>
 							<span class="search-text">Search here</span></a>
 						<!-- search popup -->
-						<div id="search" class="pop-overlay">
+						<div userId="search" class="pop-overlay">
 							<div class="popup">
 
 								<form action="#" method="post" class="search-box">
-									<input type="search" placeholder="Keyword" name="search" required="required"
+									<input type="search" placeholder="Keyword" userName="search" required="required"
 										autofocus="">
 									<button type="submit" class="btn">Search</button>
 								</form>
@@ -129,7 +129,7 @@ Author URL: http://w3layouts.com
 						aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon fa fa-bars"> </span>
 					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<div class="collapse navbar-collapse" userId="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item active">
 								<a class="nav-link" href="index.html">Home</a>
@@ -156,7 +156,7 @@ Author URL: http://w3layouts.com
 
 			<!--/banner-slider-->
 			<div class="content-baner-inf">
-				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<div userId="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 					<ol class="carousel-indicators">
 						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -369,7 +369,7 @@ Author URL: http://w3layouts.com
 									<a class="play-button btn popup-with-zoom-anim" href="#small-dialog">
 											<span class="fa fa-play" aria-hidden="true"></span>
 									</a>
-									<div id="small-dialog" class="mfp-hide">
+									<div userId="small-dialog" class="mfp-hide">
 										<div class="search-top notify-popup">
 												<iframe src="https://player.vimeo.com/video/246139491" frameborder="0"
 												allow="autoplay; fullscreen" allowfullscreen></iframe>
@@ -417,10 +417,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 							<form action="#" method="post">
-									<input type="hidden" name="cmd" value="_cart">
-									<input type="hidden" name="add" value="1">
-									<input type="hidden" name="transmitv_item" value="Women Maroon Top">
-									<input type="hidden" name="amount" value="899.99">
+									<input type="hidden" userName="cmd" value="_cart">
+									<input type="hidden" userName="add" value="1">
+									<input type="hidden" userName="transmitv_item" value="Women Maroon Top">
+									<input type="hidden" userName="amount" value="899.99">
 									<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 										Add to Cart
 									</button>
@@ -448,10 +448,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="Men's Pink Shirt">
-											<input type="hidden" name="amount" value="599.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="Men's Pink Shirt">
+											<input type="hidden" userName="amount" value="599.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -480,10 +480,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="Dark Blue Top">
-											<input type="hidden" name="amount" value="799.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="Dark Blue Top">
+											<input type="hidden" userName="amount" value="799.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -512,10 +512,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="Women Tunic">
-											<input type="hidden" name="amount" value="399.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="Women Tunic">
+											<input type="hidden" userName="amount" value="399.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -544,10 +544,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="Yellow T-Shirt">
-											<input type="hidden" name="amount" value="299.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="Yellow T-Shirt">
+											<input type="hidden" userName="amount" value="299.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -576,10 +576,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="Straight Kurta">
-											<input type="hidden" name="amount" value="699.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="Straight Kurta">
+											<input type="hidden" userName="amount" value="699.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -608,10 +608,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="White T-Shirt">
-											<input type="hidden" name="amount" value="599.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="White T-Shirt">
+											<input type="hidden" userName="amount" value="599.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -640,10 +640,10 @@ Author URL: http://w3layouts.com
 							</ul>
 							<div class="transmitv single-item">
 									<form action="#" method="post">
-											<input type="hidden" name="cmd" value="_cart">
-											<input type="hidden" name="add" value="1">
-											<input type="hidden" name="transmitv_item" value="Blue Sweater">
-											<input type="hidden" name="amount" value="499.99">
+											<input type="hidden" userName="cmd" value="_cart">
+											<input type="hidden" userName="add" value="1">
+											<input type="hidden" userName="transmitv_item" value="Blue Sweater">
+											<input type="hidden" userName="amount" value="499.99">
 											<button type="submit" class="transmitv-cart ptransmitv-cart add-to-cart">
 												Add to Cart
 											</button>
@@ -696,7 +696,7 @@ Author URL: http://w3layouts.com
 				<h3 class="hny-title text-center mb-0 ">Latest Blog <span>Posts</span></h3>
 				<p class="mb-5 text-center">Handpicked Favourites just for you</p>
 			<div class="post-hny-grids row mt-5">
-				<div class="col-lg-3 col-md-6 grids5-info column-img" id="zoomIn">
+				<div class="col-lg-3 col-md-6 grids5-info column-img" userId="zoomIn">
 					<a href="#">
 						<figure>
 							<img class="img-fluid" src="assets/images/bg1.jpg" alt="blog-image">
@@ -712,7 +712,7 @@ Author URL: http://w3layouts.com
 						<h4><a href="#">Here to bring your life style to the next level.</a></h4>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 grids5-info column-img" id="zoomIn">
+				<div class="col-lg-3 col-md-6 grids5-info column-img" userId="zoomIn">
 					<a href="#">
 						<figure>
 							<img class="img-fluid" src="assets/images/bg2.jpg" alt="blog-image">
@@ -727,7 +727,7 @@ Author URL: http://w3layouts.com
 						<h4><a href="#">Here to bring your life style to the next level.</a></h4>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 grids5-info column-img" id="zoomIn">
+				<div class="col-lg-3 col-md-6 grids5-info column-img" userId="zoomIn">
 					<figure>
 						<img class="img-fluid" src="assets/images/bg3.jpg" alt="blog-image">
 					</figure>
@@ -741,7 +741,7 @@ Author URL: http://w3layouts.com
 					</div>
 				</div>
 
-				<div class="col-lg-3 col-md-6 grids5-info column-img" id="zoomIn">
+				<div class="col-lg-3 col-md-6 grids5-info column-img" userId="zoomIn">
 					<figure>
 						<img class="img-fluid" src="assets/images/bg4.jpg" alt="blog-image">
 					</figure>
@@ -768,7 +768,7 @@ Author URL: http://w3layouts.com
 				<p class="mb-5 text-center">What People Say</p>
 			<div class="row customerhny my-lg-5 my-4">
 				<div class="col-md-12">
-					<div id="customerhnyCarousel" class="carousel slide" data-ride="carousel">
+					<div userId="customerhnyCarousel" class="carousel slide" data-ride="carousel">
 
 						<ol class="carousel-indicators">
 							<li data-target="#customerhnyCarousel" data-slide-to="0" class="active"></li>
@@ -937,7 +937,7 @@ Author URL: http://w3layouts.com
 						<form action="#" method="post" class="signin-form mt-lg-5 mt-4">
 							<div class="forms-gds">
 								<div class="form-input">
-									<input type="email" name="" placeholder="Your email here" required="">
+									<input type="email" userName="" placeholder="Your email here" required="">
 								</div>
 								<div class="form-input"><button class="btn">Join</button></div>
 							</div>
@@ -1041,7 +1041,7 @@ Author URL: http://w3layouts.com
                               W3Layouts</a>
                       </p>
                   </div>
-                  <button onclick="topFunction()" id="movetop" title="Go to top">
+                  <button onclick="topFunction()" userId="movetop" title="Go to top">
                       <span class="fa fa-angle-double-up"></span>
                   </button>
               </div>
