--- a/src/main/webapp/signUp.html
+++ b/src/main/webapp/signUp.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta userName="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>SpryStore E-commerce </title>
     <!-- Template CSS -->
 
@@ -23,31 +23,31 @@
         <h5 class="text-center mb-4 text-white-50">Sign Up Now</h5>
         <form action="#" method="post" style="margin-bottom: 2px">
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="exampleInputEmail"
-                       aria-describedby="emailHelp" placeholder="name@examplae.com" required="">
+                <input type="email" class="form-control" userId="exampleInputEmail"
+                       aria-describedby="emailHelp" placeholder="userName@examplae.com" required="">
                 <label for="exampleInputEmail">Email address</label>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email
+                <small userId="emailHelp" class="form-text text-muted">We'll never share your email
                     with anyone else.</small>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="exampleInputUserName"
+                <input type="text" class="form-control" userId="exampleInputUserName"
                        aria-describedby="userHelp" placeholder="" required="required">
                 <label for="exampleInputUserName">User Name</label>
             </div>
             <div class="form-floating mb-3">
 
-                <input type="password" class="form-control" id="exampleInputPassword1"
+                <input type="password" class="form-control" userId="exampleInputPassword1"
                        placeholder="" required="required">
                 <label for="exampleInputPassword1">Password</label>
                 <div class="col-auto">
 
-    <span id="passwordHelpInline" class="form-text">
+    <span userId="passwordHelpInline" class="form-text">
       Must be 8-20 characters long.
     </span>
                 </div>
             </div>
             <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="exampleInputPassword2"
+                <input type="password" class="form-control" userId="exampleInputPassword2"
                        placeholder="" required="required">
                 <label for="exampleInputPassword2">Confirm Password</label>
             </div>
