--- a/src/main/resources/CheckOrder.html
+++ b/src/main/resources/CheckOrder.html
@@ -832,7 +832,7 @@
                                                                     Shipping address:</p>
                                                                 <p
                                                                         style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;font-size:14px">
-                                                                    <strong>:HOME_ADDRESS:,<br>:STREET:,<br>:PROVINCE:</strong>
+                                                                    <strong>:HOME_ADDRESS:,<br>:DISTRICT:,<br>:CITY:</strong>
                                                                 </p>
                                                             </td>
                                                         </tr>
